[tool.poetry]
name = "asyncaerospike"
version = "0.1.0"
description = "Asynchronous connector for Aerospike database"
authors = ["MarkAntipin <antipinsuperstar@yandex.ru>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
construct = "^2.10.61"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
